# codexlens-search

./: .gitignore  LICENSE  README.md  README_zh.md  bench_ablation.py  bench_ablation_expansion.json  bench_ablation_expansion.py  bench_ablation_expansion_v2.json  bench_ablation_expansion_v2.py  bench_ablation_p2p3.json  bench_ablation_p2p3.py  bench_ablation_results.json  bench_ablation_v2.py  bench_ablation_v2_results.json  bench_ace_eval.py  bench_ace_vs_codexlens.py  bench_codexlens_results.json  bench_comparison_report.json  bench_comparison_report.md  bench_complex_ace.json  bench_complex_codexlens.json  bench_complex_comparison.py  bench_complex_report.json  bench_complex_report.md  bench_complex_report_zh.md  bench_dml.py  bench_fullrepo_report_zh.md  bench_index.py  build_ace_json.py  conftest.py  pyproject.toml
.ccw/.spec-index/: personal.index.json  specs.index.json
.codexlens-nomic-q/: faiss_binary.index  fts.db  metadata.db  usearch_ann.index
.focused_test_db/: fts.db  metadata.db  usearch_ann.index
.tmp/locbench_index/Chainlit__chainlit-1575/: faiss_binary.index  fts.db  metadata.db  usearch_ann.index
.tmp/locbench_index/UXARRAY__uxarray-1117/: faiss_binary.index  fts.db  metadata.db  usearch_ann.index
.tmp/locbench_index/ultralytics__ultralytics-17810/: faiss_binary.index  metadata.db
bench/: .analysis_context.md  LOCBENCH_ENHANCEMENT_PLAN.md  locbench_agent_post_p0p2.jsonl  locbench_agent_post_p0p2_clean.jsonl  locbench_agent_results.jsonl  locbench_agent_v2.jsonl  locbench_agent_v3.jsonl  locbench_agent_v4.jsonl  locbench_agent_v4b.jsonl  locbench_agent_v5.jsonl  locbench_agent_v5_glm5.jsonl  locbench_agent_v6_glm5.jsonl  locbench_agent_v6_graph.jsonl  locbench_agent_v7_hybrid.jsonl  locbench_agent_v7b_hybrid_opt.jsonl  locbench_agent_v8_llm_expand.jsonl  locbench_baseline_v2.jsonl  locbench_eval.py  locbench_post_p0p2.jsonl  locbench_post_p0p2_chunk.jsonl  locbench_post_p0p2_full.jsonl  locbench_results_backup.jsonl  locbench_results_smoke.jsonl  locbench_results_smoke_chunk.jsonl  locbench_smoke.jsonl  locbench_v6_log.txt  pipeline_diagnostic.jsonl  pipeline_diagnostic.py
docs/: search-strategy.md
scripts/: index_and_search.py  test_small_e2e.py
src/codexlens_search/: __init__.py  bridge.py  config.py  mcp_server.py  model_manager.py
src/codexlens_search/agent/: __init__.py  loc_agent.py  tools.py
src/codexlens_search/core/: __init__.py  base.py  binary.py  entity.py  entity_graph.py  factory.py  faiss_index.py  index.py  shard.py  shard_manager.py  usearch_index.py
src/codexlens_search/embed/: __init__.py  api.py  base.py  local.py
src/codexlens_search/indexing/: __init__.py  gitignore.py  metadata.py  pipeline.py
src/codexlens_search/parsers/: __init__.py  chunker.py  parser.py  references.py  symbols.py
src/codexlens_search/rerank/: __init__.py  api.py  base.py  local.py
src/codexlens_search/search/: __init__.py  expansion.py  fts.py  fusion.py  graph.py  llm_expand.py  pipeline.py
src/codexlens_search/watcher/: __init__.py  events.py  file_watcher.py  incremental_indexer.py
tests/: bench_parallel.py
tests/e2e/: conftest.py  test_cli_workflow.py  test_mcp_tools.py  test_search_accuracy.py
tests/fixtures/: auth_handler.py  cache_manager.py  config_parser.py  data_pipeline.py  database_connector.py  event_emitter.py  file_processor.py  http_client.py  math_utils.py  string_utils.py  task_scheduler.py
tests/integration/: conftest.py  test_bridge_config_integration.py  test_bridge_pipeline_integration.py  test_embed_rerank_integration.py  test_factory_integration.py  test_gitignore_integration.py  test_graph_integration.py  test_incremental_sync.py  test_indexing_pipeline_integration.py  test_parser_integration.py  test_quality_tiers.py  test_search_pipeline.py  test_shard_integration.py
tests/unit/: test_agent_async.py  test_bridge.py  test_bridge_coverage.py  test_chunker.py  test_config.py  test_core.py  test_embed.py  test_embed_coverage.py  test_entity_graph.py  test_factory.py  test_factory_coverage.py  test_faiss_index.py  test_fts_connection_pool.py  test_fts_delete.py  test_fts_symbols.py  test_gitignore.py  test_graph_search.py  test_incremental.py  test_indexing_pipeline.py  test_loc_agent.py  test_loc_agent_parallel.py  test_mcp_server.py  test_mcp_server_coverage.py  test_metadata_store.py  test_metadata_tiers.py  test_model_manager.py  test_parallel_search.py  test_phase1_query_expansion.py  test_phase1_search_enhancements.py  test_pipeline_coverage.py  test_references.py  test_rerank.py  test_reranker_parallel.py  test_search.py  test_search_pipeline_quality.py  test_shard.py  test_shard_manager.py  test_usearch_index.py  test_watcher.py
