[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexlens-search"
version = "0.5.2"
description = "Lightweight semantic code search engine — hybrid vector + FTS + AST graph + regex fusion + MCP server"
requires-python = ">=3.10"
dependencies = [
    "hnswlib>=0.8.0",
    "numpy>=1.26",
    "fastembed>=0.4.0,<2.0",
    "httpx>=0.25",
    "mcp[cli]>=1.0.0",
    "faiss-cpu>=1.7.4",
    "watchdog>=3.0",
    "pathspec>=0.11",
    "tree-sitter>=0.23",
    "tree-sitter-languages>=1.8",
]
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "codexlens-search contributors"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/catlog22/codexlens-search"
Repository = "https://github.com/catlog22/codexlens-search"

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16",
    "faiss-gpu>=1.7.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
codexlens-search = "codexlens_search.bridge:main"
codexlens-mcp = "codexlens_search.mcp_server:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "e2e: end-to-end tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codexlens_search"]
